[package]
name = "surl"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1.4.3"
hyper = { version = "0.14", features = ["server","tcp", "http1"] }
rusty-leveldb = "0.3.6"
tokio = { version = "1", features= ["full"] }
url = "2.2.2"

[profile.release]
opt-level = 3
debug = false
lto = false
codegen-units = 1
strip = true